# adora-compiler

./: CMakeLists.txt  README.md  env.sh
build_tools/: build_cgraopt.sh  build_llvm.sh
experiments/AILayers/conv2d/: affine.mlir  main.c  tosa_conv2d.mlir
experiments/AILayers/conv2d/IR/: 3_conv2d_llvm.mlir  IR3_intermediate_conv2d_llvm.mlir  IR3_intermediate_deriche_llvm.mlir  affine.mlir  affine_host.mlir  affine_normalized.mlir  conv2d.bc  conv2d.ll  conv2d_opt.ll  deriche.bc  deriche_opt.ll
experiments/AILayers/conv2d/IR/0_kernels/: conv2d_kernel_0.mlir
experiments/AILayers/conv2d/IR/1_kernels_opt/: conv2d_kernel_0_opt.mlir
experiments/AILayers/conv2d/IR/2_dfgs/: conv2d_kernel_0_CDFG.dot
experiments/AILayers/conv2d/IR/3_cgra_exes/: conv2d_kernel_0_exe.c
experiments/AILayers/conv2d/scripts/: 0_TorchmlirtoMLIR.sh  1_kernel_opt.sh  2_kernel_dfgs.sh  4_get_all_asms.sh  5_compile_and_link.sh
experiments/AILayers/linear/: 2_host.mlir  affine.mlir  linalg_linear.mlir  main.c  scripts.sh  tosa_linear.mlir
experiments/AILayers/linear/IR/: affine_host.mlir  affine_normalized.mlir
experiments/AILayers/linear/scripts/: 0_compileCtoMLIR.sh  0_precompileForAI.sh  1_kernel_opt.sh  3_kernel_map.sh  4_get_all_asms.sh  5_compile_and_link.sh  env.sh
experiments/resource/: cgra_adg.json  operations.json  tram_spec.json
include/RAAA/Misc/: CMakeLists.txt  DFG.h  Passes.h  Passes.td
lib/DFG/Documents/: GeneralOpName.txt  cgra_adg20241118.json  operations20241118.json
lib/DFG/inc/: llvm_cdfg_edge.h  llvm_cdfg_node.h  mlir_cdfg.h
lib/DFG/src/: CMakeLists.txt  llvm_cdfg_node.cpp  mlir_cdfg.cpp
lib/Dialect/: CMakeLists.txt
lib/Dialect/ADORA/IR/: ADORADialect.cpp  ADORAOps.cpp  CMakeLists.txt
lib/Dialect/ADORA/Lowering/: ADORAToSCF.cpp  CMakeLists.txt  KernelCallToLLVM.cpp  LowerPassDetail.h  MathRewrite.cpp
lib/Dialect/ADORA/Transforms/: AdjustMemoryFootprint.cpp  AffineForToKernelPass.cpp  AffineLoopReorder.cpp  AffineLoopSimplify.cpp  AffineLoopUnroll.cpp  AffineLoopUnrollAndJam.cpp  AutoDesignSpaceExplore.cpp  AutoUnroll.cpp  CMakeLists.txt  DFGgen.cpp  DependencyAnalysis.cpp  KernelToFuncPass.cpp  PassDetail.h  ScheduleAdoraTasks.cpp  SimplifyLoadStore.cpp  Utility.cpp
lib/Misc/: CMakeLists.txt  MiscPasses.cpp
mapper/: CMakeLists.txt
mapper/include/dfg/: dfg.h  dfg_edge.h  dfg_node.h
mapper/include/emit/: EmitCGRACall.h  OpVisitor.h
mapper/include/ir/: dfg_ir.h
mapper/include/mapper/: configuration.h  io_scheduler.h  mapper.h  mapper_sa.h  mapping.h  visualize.h
mapper/src/dfg/: dfg.cpp  dfg_node.cpp
mapper/src/emit/: EmitCGRACall.cpp
mapper/src/ir/: adg_ir.cpp  dfg_ir.cpp
mapper/src/mapper/: configuration.cpp  io_scheduler.cpp  mapper.cpp  mapper_sa.cpp  mapper_sa.cpp.backup  mapping.cpp  visualize.cpp
tools/: CMakeLists.txt
tools/cgra-mapper/: CMakeLists.txt  cgra-mapper.cpp  run.sh
tools/cgra-opt/: CMakeLists.txt  cgra-opt.cpp
(+264 files in other folders)
